postcss/tests/testData/inspections/nesting/customSelectorWithNest.pcss
@custom-selector :--a <warning descr="Top level ruleset selector should not contain '@nest'"><error descr="';' expected">@</error>nest</warning> a <warning descr="Top level ruleset selector should not contain '&'">&</warning><error descr="'{' expected"><error descr="Unexpected token">;</error></error>

p {
  <warning descr="Nested ruleset selector should start with '&'">:--a</warning> {
    color: red;
  }

  @custom-selector :--b div &;
}